--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,7 @@
         the channel volume is set to the sample's "default"
 [X] Handle multiple channels in a pattern.
 [X] Correct handling of "set speed"
-[ ] Implement volume slide effect.
+[X] Implement volume slide effect.
 [ ] Implement pitch slide (slide up, slide down, portamento)
 [ ] Fix iterator related bugs in parsing patterns (Manifested on Windows)
 [ ] Fix empty sample loading bug (Manifested on Windows)
